--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,32 @@
 {
-
-    "name": "Codechef Checker",
-    "version": "0.0.1",
-    "manifest_version": 2,
-    "browser_action": {
-        "default_popup": "popup.html",
-        "default_icon": "logo.png",
-        "default_title": "perfWatch"
+  "name": "Codechef Checker",
+  "version": "0.0.1",
+  "manifest_version": 3,
+  "action": {
+      "default_popup": "popup.html",
+      
+      "default_title": "perfWatch",
+      "default_icon": { "128": "logo.png"}
+  },
+  
+  "icons": {
+      "128": "logo.png"
+  },
+  "permissions": ["notifications","storage",
+      "webRequest","tabs","activeTab","declarativeNetRequest","webRequestBlocking","declarativeNetRequestFeedback",
+      "https://www.codechef.com/api/ide/*","https://www.codechef.com/error_status_table/*"
+      
+    ],
+    "background": {
+      "service_worker": "background.js"
+      
     },
-    "icons": {
-        "128": "logo.png"
-    },
-    "permissions": [
-        "webRequest","tabs","activeTab",
-        "*://*.google.com/"
-      ],
-      "background": {
-        "scripts": ["background.js"],
-        "persistent": true
-      },
-      "content_scripts": [
-        {
-          "matches": ["http://*/*", "https://*/*"],
-          "js": ["contentScript.js"]
-        }
-      ]
+    "content_scripts": [
+      {
+        "matches": [ "https://www.codechef.com/submit/*"],
+        "js": ["contentScript.js"]
+      }
+    ]
 
 
 }
